29 customer detail in auction (#32)
* feat: adding user name field in response

* feat: update docs, and get images from auction

* feat: get auction by user authenticate not by id

* feat: apply lint
