# core/serializers/auction.py
@@ -9,7 +9,12 @@ class AuctionImageSerializer(serializers.ModelSerializer):
 
 
 class AuctionSerializer(serializers.ModelSerializer):
-    images = AuctionImageSerializer(many=True)
+    first_name = serializers.CharField(source="seller.user.first_name", read_only=True)
+    last_name = serializers.CharField(source="seller.user.last_name", read_only=True)
+    email = serializers.EmailField(source="seller.user.email", read_only=True)
+    images = AuctionImageSerializer(
+        many=True, read_only=True, source="auctionimage_set"
+    )
 
     class Meta:
         model = Auction
